set up Card, added mapping of it to Grid

--- a/src/components/Grid/Grid.css
+++ b/src/components/Grid/Grid.css
@@ -19,4 +19,12 @@
 
 .gridContentWrapper {
   max-width: 720px;
+  display: flex;
+  flex-flow: row wrap;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+
+.gridCardWrapper {
+  padding: 10px;
 }
