added lodash; added styling for Grid and Card; not proud of what I did - forcing the gif size, but it's current cleanest solution for maintaining grid style

--- a/src/components/Grid/Grid.css
+++ b/src/components/Grid/Grid.css
@@ -5,6 +5,8 @@
   flex-flow: column nowrap;
   align-items: center;
   justify-content: center;
+
+  margin-bottom: 50px;
 }
 
 .loadingIcon {
@@ -18,13 +20,9 @@
 }
 
 .gridContentWrapper {
-  max-width: 720px;
+  max-width: 840px;
   display: flex;
   flex-flow: row wrap;
   align-items: flex-start;
   justify-content: flex-start;
-}
-
-.gridCardWrapper {
-  padding: 10px;
 }
