--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,6 +1,17 @@
 .cardWrapper {
-  width: 190px;
-  height: 150px;
-  border: 1px solid lightgrey;
-  border-radius: 5px;
+  position: relative;
+  top: 0;
+  transition: top ease 0.5s;
+
+  cursor: pointer;
+}
+
+.cardWrapper:hover {
+  top: -2px;
+}
+
+.gifCard {
+  width: 200px;
+  height: 160px;
+  padding: 5px;
 }
