--- a/src/components/GifModal/GifModal.css
+++ b/src/components/GifModal/GifModal.css
@@ -10,6 +10,10 @@
 
 .modalInfoRow {
   margin: 8px 0;
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: flex-start;
+  justify-content: flex-start;
 }
 
 .modalInfoRowTitle {
@@ -20,5 +24,5 @@
 }
 
 .modalInfoRowValue {
-
+  padding: 5px 12px;
 }
